; ModuleID = '/home/carl/AnghaBench/xLua/build/luajit-2.1.0b2/src/extr_lj_parse.c_parse_then.c'
source_filename = "/home/carl/AnghaBench/xLua/build/luajit-2.1.0b2/src/extr_lj_parse.c_parse_then.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TK_then = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @parse_then to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @parse_then(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call i32 @lj_lex_next(i32* %4)
  %6 = load i32*, i32** %2, align 8
  %7 = call i32 @expr_cond(i32* %6)
  store i32 %7, i32* %3, align 4
  %8 = load i32*, i32** %2, align 8
  %9 = load i32, i32* @TK_then, align 4
  %10 = call i32 @lex_check(i32* %8, i32 %9)
  %11 = load i32*, i32** %2, align 8
  %12 = call i32 @parse_block(i32* %11)
  %13 = load i32, i32* %3, align 4
  ret i32 %13
}

declare dso_local i32 @lj_lex_next(i32*) #1

declare dso_local i32 @expr_cond(i32*) #1

declare dso_local i32 @lex_check(i32*, i32) #1

declare dso_local i32 @parse_block(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
